Fix image overflow in mobile
Resolves #225

--- a/src/components/organisms/snippetCard/blogSnippetCard/_index.scss
+++ b/src/components/organisms/snippetCard/blogSnippetCard/_index.scss
@@ -46,11 +46,16 @@
     --cover-aspect-ratio: 1.78;
     @include card-full-width-section;
     margin-top: 0.375rem;
-    min-width: calc(100% + 3rem);
+    min-width: calc(100% + 2rem);
     object-fit: cover;
     margin-bottom: 0;
     min-height: calc(260px / var(--cover-aspect-ratio));
     max-height: calc(680px / var(--cover-aspect-ratio));
+
+    @media screen and (min-width: $layout-medium-breakpoint) {
+      min-width: calc(100% + 3rem);
+      margin-top: 0.375rem;
+    }
   }
 
   ol.blog-list {
@@ -173,6 +178,10 @@
       &, &:link, &:visited {
         color: var(--blog-image-credit-link-color);
       }
+    }
+
+    @media screen and (min-width: $layout-medium-breakpoint) {
+      margin-top: -2.375rem;
     }
   }
 
